Change internal representation of customEndpoint to URI. sb:// is not a recognized protocol for URL.